# model/admin/req.go
@@ -5,4 +5,9 @@ type (
 		Email    string `validate:"email"`
 		Password string `validate:"gte=8"`
 	}
+
+	SignInReqBody struct {
+		Email	 string `binding:"email"`
+		Password string `binding:"gte=8"`
+	}
 )
